Redesign footer: modern look, avatar, gradient, improved structure and styles

--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
     
     <!-- Footer -->
     <footer class="footer">
+        <div class="footer-gradient"></div>
         <div class="footer-content">
+            <div class="footer-profile">
+                <img class="footer-avatar" src="https://avatars.githubusercontent.com/Tanmaiyee-Vadloori" alt="Tanmaiyee Vadloori avatar" loading="lazy" />
+            </div>
             <div class="footer-tagline"></div>
             <div class="footer-social"></div>
             <div class="footer-bottom">
