--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
             <h2></h2>
         </section>
 
+        <section class="education" aria-label="Education">
+            <h2></h2>
+            <div class="education-list"></div>
+        </section>
+
         <section class="projects-on-github" aria-label="GitHub projects">
             <h2></h2>
             <div id="projects" class="projects-grid">
